# docker2aci

./: .gitignore  BUILD  BUILD.bazel  README_BAZEL  WORKSPACE  bazel-bin  bazel-docker2aci  bazel-genfiles  bazel-out  bazel-testlogs
lib/: BUILD  BUILD.bazel
lib/common/: BUILD  BUILD.bazel
lib/internal/: BUILD  BUILD.bazel
lib/internal/backend/file/: BUILD  BUILD.bazel
lib/internal/backend/repository/: BUILD  BUILD.bazel
lib/internal/docker/: BUILD  BUILD.bazel
lib/internal/tarball/: BUILD  BUILD.bazel
lib/internal/types/: BUILD  BUILD.bazel
lib/internal/typesV2/: BUILD  BUILD.bazel
lib/internal/util/: BUILD  BUILD.bazel
lib/tests/: BUILD  BUILD.bazel
pkg/log/: BUILD.bazel
