load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/appc/docker2aci",
    visibility = ["//visibility:private"],
    deps = [
        "//lib:go_default_library",
        "//lib/common:go_default_library",
        "//pkg/log:go_default_library",
        "//vendor/github.com/appc/spec/aci:go_default_library",
        "//vendor/github.com/appc/spec/schema:go_default_library",
    ],
)

go_binary(
    name = "docker2aci",
    embed = [":go_default_library"],
    importpath = "github.com/appc/docker2aci",
    visibility = ["//visibility:public"],
)
