load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["file.go"],
    importpath = "github.com/appc/docker2aci/lib/internal/backend/file",
    visibility = ["//lib:__subpackages__"],
    deps = [
        "//lib/common:go_default_library",
        "//lib/internal:go_default_library",
        "//lib/internal/tarball:go_default_library",
        "//lib/internal/types:go_default_library",
        "//lib/internal/typesV2:go_default_library",
        "//pkg/log:go_default_library",
        "//vendor/github.com/appc/spec/schema:go_default_library",
        "//vendor/github.com/opencontainers/image-spec/specs-go/v1:go_default_library",
    ],
)
